--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <script src='main.js'></script>
 </head>
 <body>
-
-    <div class="nav">
-            <a class="link1" href="#">Home</a>
-            <a class="link1" href="#">About me</a>
+    <div class="header">
+        <h1>Nils Pettersson</h1>
+        <a href="#"><img class="icon" src="icons/github.png"></a>
     </div>
 
 </body>
