--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 </head>
 <body>
     <div class="header">
-        <h1>Nils Pettersson</h1>
+        <h1>Hello, I'm Nils Pettersson</h1>
+        <h3>This is my programing portfolio.</h3>
         <a href="#"><img class="icon" src="icons/github.png"></a>
+    </div>
+
+    <div class="container">
+
+        <div class="grid">
+            <div class="grid-about">
+                <h3>About me</h3>
+                <p>I am a fullstack developer living in skövde.
+                    I have a passion for algoritms and problem solving.
+            </div>
+        </div>
+
     </div>
 
 </body>
