added buttons for view code and demo

--- a/index.html
+++ b/index.html
@@ -31,9 +31,22 @@
                     </div>
                     <div class="project-desc">
                         <h2>Project manager</h2>
-                        <p>This project makes it easy to do some stuff blablabla</p>
+                        <p>This project makes it easy to do some stuff blablabla sad as das d as das d asd as da sd a  asdasdasd as d asd as dasd asd  as das dasd as sda das</p>
                         <h3>What I learned</h3>
                         <p>from creating this project I learned how to do stuff and that will help me with stuff!</p>
+                        
+                        <div class="skills">
+                            <div class="used">
+                                <a>JavaScript</a>
+                                <a>C#</a>
+                                <a>C#</a>
+                                <a>asp.net</a>
+                            </div>
+                        </div>
+                        
+                        <a href="#" class="button">Demo</a>
+                        <a href="#" class="button">View code</a>
+
                     </div>
 
                 </div>
