--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <h1>Hello, I'm Nils Pettersson</h1>
-            <h3>This is my programing portfolio.</h3>
+            <h1>Nils Pettersson</h1>
+            <h3>Fullstack developer</h3>
             <div>
                 <a href="https://github.com/nilspettersson" target="_blank"><img class="icon" src="icons/github.png"></a>
             </div>
@@ -24,11 +24,19 @@
 
     <div class="container">
 
-            <div id="second" class="projects">
-                <div class="project-header">
-                    <h1>Projects</h1>
-                </div>
+        <div id="second" class="grid">
+            <div class="main-header">
+                <h1>About</h1>
             </div>
+            <div class="about">
+                <p>I love learning new things and understanding the process .
+                    I have a passion for algoritms and problem solving.
+            </div>
+
+            <div class="main-header">
+                <h1>Projects</h1>
+            </div>
+        </div>
 
 </body>
 </html>
