--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 
         <div id="second" class="grid">
             <div class="main-header">
-                <h1>About</h1>
+                <h1>About me</h1>
             </div>
             <div class="about">
-                <p>I love learning new things and understanding the process .
-                    I have a passion for algoritms and problem solving.
+                <p>My name is Nils Pettersson and I love learning new things and creating scalable software.
+                    I have a passion for algorithms and problem solving.
+                </p>
             </div>
 
             <div class="main-header">
