--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>About me</h1>
             </div>
             <div class="about">
-                <p>My name is Nils Pettersson and I love learning new things and creating scalable software.
+                <p>My name is Nils Pettersson and I love to learn new things and creating scalable software.
                     I have a passion for algorithms and problem solving.
                 </p>
             </div>
