--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <h1>Nils Pettersson</h1>
             <h3>Fullstack developer</h3>
             <div>
-                <a href="https://github.com/nilspettersson" target="_blank"><img class="icon" src="icons/github.png"></a>
+                <a class="link" href="https://github.com/nilspettersson" target="_blank">
+                    <img class="icon" src="icons/github.png">
+                    <div>Github</div>
+                </a>
             </div>
             <div>
                 <a href="#" class="header-button" onclick="smoothScroll(document.getElementById('second'))">View Portfolio</a>
@@ -38,6 +41,16 @@
                 <h1>Projects</h1>
             </div>
         </div>
+
+    </div>
+
+    <div class="footer">
+        <h2>Contact</h2>
+        <a class="link" href="https://github.com/nilspettersson" target="_blank">
+            <img class="icon" src="icons/github.png">
+            <div>Github</div>
+        </a>
+    </div>
 
 </body>
 </html>
