about text changed

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h1>About me</h1>
             </div>
             <div class="about">
-                <p>My name is Nils Pettersson and I love to learn new things and creating scalable software.
-                    I have a passion for algorithms and problem solving.
+                <p>My name is Nils Pettersson, I love to learn new things and creating scalable software.
+                    I have a passion for algorithms and problem solving. On this page you can see some of my projects, more projects can be found on my github!
                 </p>
             </div>
 
