added contact form using formspree

--- a/index.html
+++ b/index.html
@@ -46,10 +46,19 @@
 
     <div class="footer">
         <h2>Contact</h2>
-        <a class="link" href="https://github.com/nilspettersson" target="_blank">
-            <img class="icon" src="icons/github.png">
-            <div>Github</div>
-        </a>
+        
+
+        <form action="https://formspree.io/mbjzeolb" method="POST">
+            <label class="email">
+                <input type="email" name="_replyto" placeholder="Your Mail">
+            </label>
+            <label class="email">
+                <textarea rows="6" name="message" placeholder=" Your Message"></textarea>
+            </label>
+            <input class="email-send" type="submit" value="Send">
+        </form>
+
+
     </div>
     
 
