changed form design

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
                 <h1>Contact</h1>
                 <form action="https://formspree.io/mbjzeolb" method="POST">
                     <label class="email">
-                        <input type="email" name="_replyto" placeholder="Your Mail">
+                        <p>Your Mail</p>
+                        <input type="email" name="_replyto">
                     </label>
                     <label class="email">
-                        <textarea rows="6" name="message" placeholder="Your Message"></textarea>
+                        <p>Your Message</p>
+                        <textarea rows="6" name="message"></textarea>
                     </label>
                     <input class="email-send" type="submit" value="Send">
                 </form>
