added Linkedin link

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             <h3>Fullstack developer</h3>
             <div>
                 <a class="link" href="https://github.com/nilspettersson" target="_blank">
-                    <img class="icon" src="icons/github.png">
+                    <img class="icon" src="icons/github.svg">
                     <div>Github</div>
+                </a>
+                <a class="link" href="https://www.linkedin.com/in/nils-pettersson-ba07a01b5/" target="_blank">
+                    <img class="icon" src="icons/linkedin.svg">
+                    <div>Linkedin</div>
                 </a>
             </div>
             <div>
