added logo to nav

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
     <div class="header">
+        <div class="nav">
+            <div class="logo">
+                <h1>NP</h1>
+                <img src="logo.svg">
+            </div>
+        </div>
         <div class="header-content">
             <h1>Nils Pettersson</h1>
             <h3>Fullstack developer</h3>
@@ -32,14 +38,12 @@
     <div class="container">
 
         <div id="second" class="grid">
-            
 
             <div id="projects" class="main-header">
                 <h1>Projects</h1>
             </div>
 
             
-
         </div>
 
         <div class="contact">
