--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Nils pettersson portfolio</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
     <div class="header">
-        <div class="nav">
+        <header class="nav">
             <div class="logo">
                 <h1>NP</h1>
                 <img src="logo.svg">
             </div>
-        </div>
+            <div class="menu">
+                <a href="#">Home</a>
+                <a href="#">Portfolio</a>
+                <a href="#">About</a>
+            </div>
+        </header>
         <div class="header-content">
             <h1>Nils Pettersson</h1>
             <h3>Fullstack developer</h3>
