--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
                 <h1>NP</h1>
                 <img src="logo.svg">
             </div>
-            <div class="menu">
+            
+            <nav>
                 <a href="#">Home</a>
                 <a href="#">Portfolio</a>
+                <a href="#">Skills</a>
                 <a href="#">About</a>
-            </div>
-        </header>
-        <div class="header-content">
-            <h1>Nils Pettersson</h1>
-            <h3>Fullstack developer</h3>
-            <div>
+                <a href="#">Contact</a>
                 <a class="link" href="https://github.com/nilspettersson" target="_blank">
                     <img class="icon" src="icons/github.svg">
-                    <div>Github</div>
                 </a>
                 <a class="link" href="https://www.linkedin.com/in/nils-pettersson-ba07a01b5/" target="_blank">
                     <img class="icon" src="icons/linkedin.svg">
-                    <div>Linkedin</div>
                 </a>
-            </div>
+            </nav>
+        </header>
+
+        <div class="header-content">
+            <h1>Nils Pettersson</h1>
+            <h3>Fullstack developer</h3>
             <div>
                 <a href="#" class="header-button" onclick="smoothScroll(document.getElementById('second'))">View Portfolio</a>
             </div>
