added laptop svg and fixed text

--- a/index.html
+++ b/index.html
@@ -32,12 +32,17 @@
             </nav>
         </header>
 
+
         <div class="header-content">
-            <h1>Nils Pettersson</h1>
-            <h3>Fullstack developer</h3>
-            <div>
-                <a href="#" class="header-button" onclick="smoothScroll(document.getElementById('second'))">View Portfolio</a>
+            <div class="content-left">
+                <h1>Nils Pettersson</h1>
+                <h3>Fullstack developer</h3>
+                <a href="#" class="header-button" onclick="smoothScroll(document.getElementById('second'))">View my projects</a>
             </div>
+            <div class="content-right">
+                <img class="" src="laptop.svg">
+            </div>
+            
         </div>
     </div>
 
