added project section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
 
 
-        <div class="header-content">
+        <div class="header-content space">
             <div class="content-left">
                 <h1>Nils Pettersson</h1>
                 <h3>Fullstack developer</h3>
@@ -96,10 +96,59 @@
 
     <div class="container">
 
-        <div class="projects-header">
+        <div class="projects-header space">
             <h1>Projects</h1>
             <p>Here is some of my work, more can be found on my github</p>
         </div>
+
+        <div class="grid space">
+            <div class="project">
+                <img src="screen.jpg">
+                <div class="buttons">
+                    <a class="demo" href="#">Demo</a>
+                    <a class="code" href="#">Code</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="screen.jpg">
+                <div class="buttons">
+                    <a class="demo" href="#">Demo</a>
+                    <a class="code" href="#">Code</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="screen.jpg">
+                <div class="buttons">
+                    <a class="demo" href="#">Demo</a>
+                    <a class="code" href="#">Code</a>
+                </div>
+            </div>
+
+            <div class="project">
+                <img src="screen.jpg">
+                <div class="buttons">
+                    <a class="demo" href="#">Demo</a>
+                    <a class="code" href="#">Code</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="screen.jpg">
+                <div class="buttons">
+                    <a class="demo" href="#">Demo</a>
+                    <a class="code" href="#">Code</a>
+                </div>
+            </div>
+            <div class="project">
+                <img src="screen.jpg">
+                <div class="buttons">
+                    <a class="demo" href="#">Demo</a>
+                    <a class="code" href="#">Code</a>
+                </div>
+            </div>
+
+
+        </div>
+
 
         <!--<div id="second" class="grid">
 
