added hamburger menu for smaller screens

--- a/index.html
+++ b/index.html
@@ -16,22 +16,27 @@
                 <h1>NP</h1>
             </div>
 
+            <input type="checkbox" class="toggle">
             <div class="hamburger">
-                <input type="checkbox">
+                <div>
+
+                </div>
             </div>
             
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Skills</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <a class="link" href="https://github.com/nilspettersson" target="_blank">
-                    <img class="icon" src="icons/github.svg">
-                </a>
-                <a class="link" href="https://www.linkedin.com/in/nils-pettersson-ba07a01b5/" target="_blank">
-                    <img class="icon" src="icons/linkedin.svg">
-                </a>
+                <div>
+                    <a href="#">Home</a>
+                    <a href="#">Portfolio</a>
+                    <a href="#">Skills</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                    <a class="link" href="https://github.com/nilspettersson" target="_blank">
+                        <img class="icon" src="icons/github.svg">
+                    </a>
+                    <a class="link" href="https://www.linkedin.com/in/nils-pettersson-ba07a01b5/" target="_blank">
+                        <img class="icon" src="icons/linkedin.svg">
+                    </a>
+                </div>
             </nav>
         </header>
 
