--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 
 
-        <div class="contact">
+        <div class="contact space">
 
             <div id="about" class="contact-text">
                 <h1>About me</h1>
