--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
         </div>
     </div>
 
+    <div id="modal" class="modal-outer hide">
+        <div class="modal">
+            soooow
+        </div>
+    </div>
+
     <div class="container">
 
         <div id="projects" class="projects-header space">
@@ -123,7 +129,7 @@
                 </div>
                 
                 <div class="buttons">
-                    <a target="_blank" class="demo" href="#">Demo</a>
+                    <input class="demo" type="button" value="View" onclick="openModal(this)">
                     <a target="_blank" class="code" href="https://github.com/nilspettersson/Project_manager">Code</a>
                 </div>
             </div>
@@ -145,7 +151,7 @@
                 </div>
                 
                 <div class="buttons">
-                    <a target="_blank" class="demo" href="https://nilspettersson.github.io/sudoku_solver/">Website</a>
+                    <input class="demo" type="button" value="View" onclick="openModal(this)">
                     <a target="_blank" class="code" href="https://github.com/nilspettersson/sudoku_solver">Code</a>
                 </div>
             </div>
