modal can now be opened

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div id="modal" class="modal-outer hide">
         <div class="modal">
-            soooow
+            <input id="close" type="button" value="&times;" onclick="closeModal()">
         </div>
     </div>
 
@@ -132,6 +132,14 @@
                     <input class="demo" type="button" value="View" onclick="openModal(this)">
                     <a target="_blank" class="code" href="https://github.com/nilspettersson/Project_manager">Code</a>
                 </div>
+
+                <div class="hide">
+                    <img src="projects/projectManager/one.JPG">
+                    <p>overview</p>
+                    <p>what i leadred</p>
+                    
+                </div>
+
             </div>
             
             <div class="project">
