added buttons for website and code in modal

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="modal">
             <input id="close" type="button" value="&times;" onclick="closeModal()">
             <div class="title">
-                <h1>manager</h1>
+                <h1 id="title"></h1>
             </div>
             <div class="img">
                 <img id="img" src="">
@@ -116,9 +116,16 @@
                     <h3>What I learned</h3>
                     <p id="learned"></p>
                     <h3>Technologies used</h3>
+                    <div id="tech">
+
+                    </div>
                 </div>
             </div>
             
+            <div class="buttons">
+                <a id="demo" target="_blank" class="demo" href="#">Website</a>
+                <a id="code" target="_blank" class="code" href="#">Code</a>
+            </div>
         </div>
     </div>
 
@@ -162,6 +169,10 @@
                         <a>c#</a>
                         <a>asp.net</a>
                     </div>
+                    <div>
+                        <p>https://github.com/nilspettersson/Project_manager</p>
+                        <p>#</p>
+                    </div>
 
                 </div>
 
@@ -196,6 +207,11 @@
                         <a>html</a>
                         <a>css</a>
                         <a>js</a>
+                    </div>
+
+                    <div>
+                        <p>https://github.com/nilspettersson/sudoku_solver</p>
+                        <p>https://nilspettersson.github.io/sudoku_solver/</p>
                     </div>
 
                 </div>
