fixed bug and added animation to about text

--- a/index.html
+++ b/index.html
@@ -145,10 +145,11 @@
                     <div class="project-content">
                         <h3>Project manager</h3>
                         <div class="skills">
-                            <a>c#</a>
                             <a>html</a>
                             <a>css</a>
                             <a>js</a>
+                            <a>c#</a>
+                            <a>asp.net</a>
                         </div>
                     </div>
                 </div>
@@ -186,7 +187,6 @@
                     <div class="project-content">
                         <h3>Sudoku Solver</h3>
                         <div class="skills">
-                            <a>c#</a>
                             <a>html</a>
                             <a>css</a>
                             <a>js</a>
@@ -223,9 +223,7 @@
 
             <div id="about" class="contact-text">
                 <h1>About me</h1>
-                <p>My name is Nils Pettersson, I love to learn new things and creating scalable software.
-                    I have a passion for algorithms and problem solving. On this page you can see some of my projects, more projects can be found on my github!
-                </p>
+                <p id="about-text"></p>
             </div>
     
             <div id="contact" class="form">
