improved about effect

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         <div class="contact space">
 
             <div id="about" class="contact-text">
-                <h1>About me</h1>
-                <p id="about-text"></p>
+                <h1 id="about-header">|</h1>
+                <p>My name is Nils Pettersson, I love to learn new things and creating scalable software. I have a passion for algorithms and problem solving. On this page you can see some of my projects, more projects can be found on my github!</p>
             </div>
     
             <div id="contact" class="form">
