improved project hover style

--- a/index.html
+++ b/index.html
@@ -138,13 +138,15 @@
                         <img src="projects/projectManager/projectManager.jpg">
                     </div>
                     <div class="project-content">
-                        <h3>Project manager</h3>
-                        <div class="skills">
-                            <a>html</a>
-                            <a>css</a>
-                            <a>js</a>
-                            <a>c#</a>
-                            <a>asp.net</a>
+                        <div>
+                            <h3>Project manager</h3>
+                            <div class="skills">
+                                <a>html</a>
+                                <a>css</a>
+                                <a>js</a>
+                                <a>c#</a>
+                                <a>asp.net</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -180,11 +182,13 @@
                         <img src="projects/sudoku/sudoku.jpg">
                     </div>
                     <div class="project-content">
-                        <h3>Sudoku Solver</h3>
-                        <div class="skills">
-                            <a>html</a>
-                            <a>css</a>
-                            <a>js</a>
+                        <div>
+                            <h3>Sudoku Solver</h3>
+                            <div class="skills">
+                                <a>html</a>
+                                <a>css</a>
+                                <a>js</a>
+                            </div>
                         </div>
                     </div>
                 </div>
