changed a tags to p for skills, added alt to images

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <a id="portfolioLink" href="#" onclick="smoothScroll(document.getElementById('projects'))">Portfolio</a>
                     <a id="aboutLink" href="#" onclick="smoothScroll(document.getElementById('about'))">About</a>
                     <a class="link" href="https://github.com/nilspettersson" target="_blank">
-                        <img class="icon" src="icons/github.svg">
+                        <img class="icon" src="icons/github.svg" alt="My github">
                     </a>
                     <a class="link" href="https://www.linkedin.com/in/nils-pettersson-ba07a01b5/" target="_blank">
-                        <img class="icon" src="icons/linkedin.svg">
+                        <img class="icon" src="icons/linkedin.svg" alt="My Linkedin">
                     </a>
                 </div>
             </nav>
@@ -105,7 +105,7 @@
                 <h1 id="title"></h1>
             </div>
             <div class="img">
-                <img id="img" src="">
+                <img id="img" src="" alt="project image">
             </div>
             <div class="text">
                 <div class="left">
@@ -139,17 +139,17 @@
             <div class="project">
                 <div>
                     <div class="project-img">
-                        <img src="projects/projectManager/projectManager.jpg">
+                        <img src="projects/projectManager/projectManager.jpg" alt="Project manager">
                     </div>
                     <div class="project-content">
                         <div>
                             <h3>Project manager</h3>
                             <div class="skills">
-                                <a>html</a>
-                                <a>css</a>
-                                <a>js</a>
-                                <a>c#</a>
-                                <a>asp.net</a>
+                                <p>html</p>
+                                <p>css</p>
+                                <p>js</p>
+                                <p>c#</p>
+                                <p>asp.net</p>
                             </div>
                         </div>
                     </div>
@@ -161,15 +161,15 @@
                 </div>
     
                 <div class="hide">
-                    <img src="projects/projectManager/one.JPG">
+                    <img src="projects/projectManager/one.JPG" alt="Project manager">
                     <p>Project manager lets you create projects and add sprints to those projects. Every sprint can contain tasks that should be competed during that sprint</p>
                     <p>This project taught me how to program using the MVC design pattern.</p>
                     <div class="skills">
-                        <a>html</a>
-                        <a>css</a>
-                        <a>js</a>
-                        <a>c#</a>
-                        <a>asp.net</a>
+                        <p>html</p>
+                        <p>css</p>
+                        <p>js</p>
+                        <p>c#</p>
+                        <p>asp.net</p>
                     </div>
                     <div>
                         <p>https://github.com/nilspettersson/Project_manager</p>
@@ -183,15 +183,15 @@
             <div class="project">
                 <div>
                     <div class="project-img">
-                        <img src="projects/sudoku/sudoku.jpg">
+                        <img src="projects/sudoku/sudoku.jpg" alt="sudoku solver">
                     </div>
                     <div class="project-content">
                         <div>
                             <h3>Sudoku Solver</h3>
                             <div class="skills">
-                                <a>html</a>
-                                <a>css</a>
-                                <a>js</a>
+                                <p>html</p>
+                                <p>css</p>
+                                <p>js</p>
                             </div>
                         </div>
                     </div>
@@ -203,13 +203,13 @@
                 </div>
 
                 <div class="hide">
-                    <img src="projects/sudoku/img1.JPG">
+                    <img src="projects/sudoku/img1.JPG" alt="sudoku solver">
                     <p>Sudoku solver Can generate sudoku puzzles that the user can solve. It can also solve sudoku puzzles that the user creates or generates.</p>
                     <p>From working on this project I have learned about backtracking and how to use it.</p>
                     <div class="skills">
-                        <a>html</a>
-                        <a>css</a>
-                        <a>js</a>
+                        <p>html</p>
+                        <p>css</p>
+                        <p>js</p>
                     </div>
                     <div>
                         <p>https://github.com/nilspettersson/sudoku_solver</p>
