added lang atribute

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
+    
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name="Description" content="My name is Nils Pettersson, I love to learn new things and creating scalable software. I have a passion for algorithms and problem solving. On this page you can see some of my projects, more projects can be found on my github!">
     <title>Nils pettersson portfolio</title>
@@ -19,12 +20,9 @@
             <div class="logo">
                 <h1>NP</h1>
             </div>
-
             <input type="checkbox" class="toggle">
             <div class="hamburger">
-                <div>
-
-                </div>
+                <div></div>
             </div>
             
             <nav>
@@ -45,7 +43,7 @@
         <div class="header-content space">
             <div class="content-left">
                 <h1>Nils Pettersson</h1>
-                <h3>Fullstack developer</h3>
+                <h2>Fullstack developer</h2>
                 <a href="#" class="header-button" onclick="smoothScroll(document.getElementById('projects'))">View my projects</a>
             </div>
             <div class="content-right">
@@ -109,13 +107,13 @@
             </div>
             <div class="text">
                 <div class="left">
-                    <h3>Overview</h3>
+                    <h2>Overview</h2>
                     <p id="overview"></p>
                 </div>
                 <div id="right" class="right">
-                    <h3>What I learned</h3>
+                    <h2>What I learned</h2>
                     <p id="learned"></p>
-                    <h3>Technologies used</h3>
+                    <h2>Technologies used</h2>
                     <div id="tech">
 
                     </div>
@@ -143,7 +141,7 @@
                     </div>
                     <div class="project-content">
                         <div>
-                            <h3>Project manager</h3>
+                            <h2>Project manager</h2>
                             <div class="skills">
                                 <p>html</p>
                                 <p>css</p>
@@ -187,7 +185,7 @@
                     </div>
                     <div class="project-content">
                         <div>
-                            <h3>Sudoku Solver</h3>
+                            <h2>Sudoku Solver</h2>
                             <div class="skills">
                                 <p>html</p>
                                 <p>css</p>
@@ -246,12 +244,12 @@
 
     <div class="footer-back space">
         <div>
-            <h3>Contact</h3>
+            <h2>Contact</h2>
             <p>Email: nils-pettsson@outlook.com</p>
             <a href="https://www.linkedin.com/in/nils-pettersson-ba07a01b5/" target="_blank"  rel="noreferrer">Linkedin</a>
         </div>
         <div>
-            <h3>Attributes</h3>
+            <h2>Attributes</h2>
             <a href='https://www.freepik.com/photos/pattern' target="_blank" rel="noreferrer">Pattern photo created by dashu83 - www.freepik.com</a>
         </div>
     </div>
