--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name="Description" content="My name is Nils Pettersson, I love to learn new things and creating scalable software. I have a passion for algorithms and problem solving. On this page you can see some of my projects, more projects can be found on my github!">
+    <meta name="Description" content="Fullstack developer Nils Pettersson. I love to learn new things and creating scalable software. I have a passion for algorithms and problem solving. On my Portfolio you can see some of my projects but Most of my projects can be found on github!">
     <title>Nils pettersson portfolio</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
