changed my description again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name="Description" content="Fullstack developer Nils Pettersson. I love to learn new things and creating scalable software. I have a passion for algorithms and problem solving. On my Portfolio you can see some of my projects but Most of my projects can be found on github!">
+    <meta name="Description" content="Fullstack developer Nils Pettersson. In my Portfolio you can see some of my projects but Most of my projects can be found on github! I have created projects like Project manager and sudoku.">
     <meta name="google-site-verification" content="Cuf4cQQ5bFr9tUxE99i2-GPZ6eut18EGdsfX__2QzLM" />
     <title>Nils pettersson portfolio</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
