--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="Description" content="Fullstack developer Nils Pettersson. In my Portfolio you can see some of my projects but Most of my projects can be found on github! I have created projects like Project manager and sudoku.">
     <meta name="google-site-verification" content="Cuf4cQQ5bFr9tUxE99i2-GPZ6eut18EGdsfX__2QzLM" />
     <title>Nils pettersson portfolio</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <script src='main.js' defer></script>
 </head>
 <body>
     <div id="home" class="header">
