changed header text and fixed design bugs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="header-content space">
             <div class="content-left">
                 <h1>Nils Pettersson</h1>
-                <h2>Fullstack developer</h2>
+                <h2>Hello! In my portfolio you can see some of the projects I have worked on. All my projects can be found on my github!</h2>
                 <a href="#" class="header-button" onclick="smoothScroll(document.getElementById('projects'))">View my projects</a>
             </div>
             <div class="content-right">
