added Nasa explorer project

--- a/index.html
+++ b/index.html
@@ -215,9 +215,43 @@
                         <p>https://nilspettersson.github.io/sudoku_solver/</p>
                     </div>
                 </div>
-
             </div>
-            
+
+            <div class="project">
+                <div>
+                    <div class="project-img">
+                        <img src="projects/nasaApiFrontend/nasa_api_frontend.jpg" alt="Nasa api frontend">
+                    </div>
+                    <div class="project-content">
+                        <div>
+                            <h2>Nasa explorer</h2>
+                            <div class="skills">
+                                <p>React</p>
+                                <p>css</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="buttons">
+                    <input class="demo" type="button" value="View" onclick="openModal(this)">
+                    <a target="_blank" class="code" href="https://github.com/nilspettersson/nasa_api_frontend"  rel="noreferrer">Code</a>
+                </div>
+
+                <div class="hide">
+                    <img src="projects/nasaApiFrontend/nasa_api_frontend.jpg" alt="Nasa api frontend">
+                    <p>Nasa explorer uses Nasa open APIs to get images using search and dates. </p>
+                    <p>Working on this project taught me about apis and the basics of react.</p>
+                    <div class="skills">
+                        <p>React</p>
+                        <p>css</p>
+                    </div>
+                    <div>
+                        <p>https://github.com/nilspettersson/nasa_api_frontend</p>
+                        <p>#</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="contact space">
