added webpage url and formating

--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                         <div>
                             <h2>Nasa explorer</h2>
                             <div class="skills">
-                                <p>React</p>
+                                <p>react</p>
+                                <p>js</p>
                                 <p>css</p>
                             </div>
                         </div>
@@ -243,12 +244,13 @@
                     <p>Nasa explorer uses Nasa open APIs to get images using search and dates. </p>
                     <p>Working on this project taught me about apis and the basics of react.</p>
                     <div class="skills">
-                        <p>React</p>
+                        <p>react</p>
+                        <p>js</p>
                         <p>css</p>
                     </div>
                     <div>
                         <p>https://github.com/nilspettersson/nasa_api_frontend</p>
-                        <p>#</p>
+                        <p>https://nilspettersson.github.io/nasa_api_frontend/#/</p>
                     </div>
                 </div>
             </div>
